--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "takes 3 apis and returns mix of them based on filters",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "./node_modules/.bin/webpack-dev-server --config ./webpack/webpack.dev.config.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-tap-event-plugin": "^3.0.2",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
   },
